--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="text"],input[type="password"],input[type="email"] {
-  @apply w-full border my-2 py-2 px-3 rounded-2xl; 
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  @apply w-full border my-2 py-2 px-3 rounded-2xl;
 }
 
-button{
+button {
   @apply bg-green-400;
 }
 
-button.primary{
+button.primary {
   @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
 
@@ -21,8 +23,112 @@ button.primary{
     @apply mb-4;
     @apply text-white
   }
-} 
+}
 
 body {
   background-color: #252728;
+  color: white;
+}
+
+nav {
+  @apply w-full;
+  @apply flex;
+  @apply justify-center;
+  @apply mt-8;
+  @apply gap-2;
+}
+
+.accountPageLinks {
+  @apply bg-green-700;
+  @apply rounded-full;
+  @apply py-2;
+  @apply px-6;
+
+}
+
+.accountPageLinks {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 260px;
+  height: 52px;
+  background: #fff;
+  transform: translate3d(0px, 0%, 0px);
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  letter-spacing: .05em;
+  transition-delay: .6s;
+  overflow: hidden;
+}
+.accountPageLinks:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #68d391;
+  border-radius: 50% 50% 0 0;
+  transform: translateY(100%) scaleY(.5);
+  transition: all .6s ease;
+}
+.accountPageLinks:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  border-radius: 0;
+  transform: translateY(0) scaleY(1);
+  transition: all .6s ease;
+}
+.accountPageLinks div {
+  position: relative;
+  top: 7px;
+  width: 100%;
+  height: 26px;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+.accountPageLinks span {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  text-align: center;
+  transition: transform .5s ease;
+}
+.accountPageLinks span:first-child {
+  color: white;
+  transform: translateY(24px);
+  font-size: 1rem;
+}
+.accountPageLinks span:last-child {
+  color: #1E0F21;
+  transform: translateY(0);
+  font-size: 1rem;
+}
+.accountPageLinks:hover {
+  background: #68d391;
+  transition: background .2s linear;
+  transition-delay: .6s;
+}
+.accountPageLinks:hover:after {
+  border-radius: 0 0 50% 50%;
+  transform: translateY(-100%) scaleY(.5);
+  transition-delay: 0;
+}
+.accountPageLinks:hover:before {
+  border-radius: 0;
+  transform: translateY(0) scaleY(1);
+  transition-delay: 0;
+}
+.accountPageLinks:hover span:first-child {
+  transform: translateY(0);
+}
+.accountPageLinks:hover span:last-child {
+  transform: translateY(-24px);
 }
