--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;200;300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+
+
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-  @apply w-full border my-2 py-2 px-3 rounded-2xl;
   @apply w-full my-2 py-2 px-3 rounded-2xl;
   background-color: rgb(59,59,59);
 }
@@ -32,11 +37,11 @@ button.primary {
 }
 
 body {
-  background-color: #252728;
+  @apply bg-maxgray;
   color: white;
+  
 }
 
-nav {
 @media (max-width: 605px) {
   .mainHeader {
     display: flex;
@@ -53,7 +58,6 @@ nav {
   @apply flex;
   @apply justify-center;
   @apply mt-8;
-  @apply gap-2;
   @apply gap-4;
 }
 
@@ -79,7 +83,7 @@ nav {
   width: 100%;
   max-width: 260px;
   height: 52px;
-  background: #fff;
+  background: #2a2e30; 
   transform: translate3d(0px, 0%, 0px);
   text-decoration: none;
   font-weight: 600;
@@ -95,8 +99,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #68d391;
-  background: rgb(33, 149, 112);
+  background: #66FCF1;
   border-radius: 50% 50% 0 0;
   transform: translateY(100%) scaleY(.5);
   transition: all .6s ease;
@@ -108,7 +111,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background: white;
+  background: #2a2e30;
   border-radius: 0;
   transform: translateY(0) scaleY(1);
   transition: all .6s ease;
@@ -130,18 +133,17 @@ nav {
   transition: transform .5s ease;
 }
 .accountPageLinks span:first-child {
-  color: white;
+  color: #2a2e30;
   transform: translateY(24px);
   font-size: 1rem;
 }
 .accountPageLinks span:last-child {
-  color: #1E0F21;
+  color: #66FCF1;
   transform: translateY(0);
   font-size: 1rem;
 }
 .accountPageLinks:hover {
-  background: #68d391;
-  background: rgb(33, 149, 112);
+  background: #2a2e30;
   transition: background .2s linear;
   transition-delay: .6s;
 }
@@ -268,4 +270,151 @@ textarea {
 body {
   max-width: 1440px;
   margin: auto;
+}
+
+.newPlaceFormLabelPerks.checked {
+  @apply bg-softgreen;
+}
+
+
+.transition-container {
+  margin: 4rem 0;
+}
+
+
+.transition-line {
+  width: 100%;
+  height: 2px;
+ @apply bg-weirdblue;
+}
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 0.35; }
+  50% { opacity: 1; }
+}
+.transition-line {
+  animation: fadeInOut 15s infinite;
+}
+
+.radialGrad  {
+  background: radial-gradient(ellipse at center, #66FCF1, #45A29E);
+}
+
+pricingContainer {
+  border: 1px solid rgb(221, 221, 221); 
+  border-radius: 12px; 
+  padding: 24px; 
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
+}
+
+/* BookingWidget.css */
+
+.booking-widget {
+  font-family: Arial, sans-serif;
+  background-color: #2b2b2b;
+  color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.price-per-night {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.checkin-checkout {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.number-of-guests {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.reserve-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background: radial-gradient(ellipse at center, #66FCF1, #45A29E);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.reserve-button:hover {
+  background: radial-gradient(ellipse at center, #45A29E, #66FCF1);
+}
+
+.reserve-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #45A29E; /* Adding a blue border when the button is focused */
+}
+
+.not-charged {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #aaa;
+}
+
+.price-details {
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.price-details > div {
+  margin-bottom: 5px;
+}
+
+.total-sum {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.checkin-checkout, .guest-name, .guest-phone {
+  margin-top: 6px;
+  font-size: 14px;
+  color: #ccc;
+}
+
+.checkin-checkout input[type="date"],
+.number-of-guests input[type="number"] {
+  background-color: #3d3d3d;
+  color: #fff;
+  border: 1px solid #666;
+  padding: 8px;
+  border-radius: 4px;
+  width: 100%;
+}
+
+
+.booking-confirmation {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  @apply bg-primary;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 999; 
+  @apply font-arima;
+  font-weight: bold;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  backdrop-filter: blur(8px); 
+  z-index: 998;
 }
